--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endCo
                
                
                  <div class="animation">
-            <img height="200" width="200" src="Photos/bhupendra.png"/>
+            <img height="200" width="200" src="Media/ProfilePicture/Bhupendra.png"/>
                 </div>
                 </div>
                <div class="animation1">
