--- a/index.html
+++ b/index.html
@@ -21,18 +21,12 @@
 
 <div>
 
-<a href="/index.php" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
+<a href="bhupendrawasti.com.np" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
 <style>
 h4{ 
    font-family: 'Carter One', cursive;}
    
-body {
-    background: rgb(238,174,202);
-background: -moz-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-background: -webkit-radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#eeaeca",endColorstr="#94bbe9",GradientType=1);
-};
+
 
 </style>
 
