--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <div>
 
-<a href="bhupendrawasti.com.np" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
+<a href="https://bhupendrawasti.com.np" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
 <style>
 h4{ 
    font-family: 'Carter One', cursive;}
