--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
     <meta name="viewport" content= "width=device-width, initial-scale=1">
    <link rel="stylesheet" type="text/css" href="Css/Style.css"
-    <link rel="stylesheet" type="text/css" href="Css/loader.css"
-    
+   <link rel="stylesheet" type="text/css" href="Css/loader.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
