--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ h4{
         <body id="page-top">
         <!-- Masthead-->
         <div class="masthead bg-primary text-white text-center">
-            <div class="header">
+            <div class="header1">
                
                
                  <div class="animation">
