--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h4{
       <br>
         <body id="page-top">
         <!-- Masthead-->
-        <div class="masthead bg-primary text-white text-center">
+        <div class="masthead1 bg-primary text-white text-center">
             <div class="header1">
                
                
@@ -88,9 +88,9 @@ h4{
                 </div>
                 </div>
                <div class="animation1">
-                <h1 class="masthead-heading text-uppercase mb-0">Bhupendra Wasti<h1>
-                <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">Student</p>
+                <h1 class="masthead1-heading text-uppercase mb-0">Bhupendra Wasti<h1>
+                <!-- Masthead1 Subheading-->
+                <p class="masthead1-subheading font-weight-light mb-0">Student</p>
             </div>
             <br><br><br><br><br> <br><br><br><br><br> <br><br><br><br><br> 
             </div>
