--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@ h4{
       <br>
         <body id="page-top">
         <!-- Masthead-->
-        <div class="masthead1 bg-primary text-white text-center">
-            <div class="header1">
+        <div class="masthead text-white text-center">
+            <div class="header">
                
                
                  <div class="animation">
             <img height="200" width="200" src="Media/ProfilePicture/Bhupendra.png"/>
                 </div>
                 </div>
-               <div class="animation1">
+               <div class="animation">
                 <h1 class="masthead1-heading text-uppercase mb-0">Bhupendra Wasti<h1>
                 <!-- Masthead1 Subheading-->
-                <p class="masthead1-subheading font-weight-light mb-0">Student</p>
+                <p class="masthead-subheading font-weight-light mb-0">Student</p>
             </div>
-            <br><br><br><br><br> <br><br><br><br><br> <br><br><br><br><br> 
+            <br><br><br><br><br><br><br><br> <br><br><br><br><br> 
             </div>
             </div>
    
