--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ h4{
       <br>
         <body id="page-top">
         <!-- Masthead-->
-        <div class="masthead text-white text-center">
+        <div class="masthead text-center">
             <div class="header">
                
                
@@ -87,6 +87,7 @@ h4{
             <img height="200" width="200" src="Media/ProfilePicture/Bhupendra.png"/>
                 </div>
                 </div>
+            <br><br>
                <div class="animation">
                 <h1 class="masthead1-heading text-uppercase mb-0">Bhupendra Wasti<h1>
                 <!-- Masthead1 Subheading-->
