--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ h4{
          
            <div class="social">
             
-           <a href="https://facebook.com/bhupendrawasti.wasti" target="_blank"><img src="Media/SocialMedia/facebook.png" height="40" width="40"> </a>
+           <a href="https://facebook.com/bhupendrawasti.official" target="_blank"><img src="Media/SocialMedia/facebook.png" height="40" width="40"> </a>
              <a href="https://www.tiktok.com/@bhupendrawasti" target="_blank"><img src="Media/SocialMedia/TikTok.png" height="40" width="40">
                <a href="#" target="_blank"><img src="Media/SocialMedia/Twitter.png" height="40" width="40"></a>
          </div>
