--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ h4{
 </li>
 
 <li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-play"></span> Games</a>
+<a href="https://bhupendrawasti.com.np/election" class="nav-link"><span class="fa fa-play"></span> Games</a>
 </li>
 
 <li class="nav-item">
