--- a/election.html
+++ b/election.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Page Title</title>
+        <meta name="viewport" content= "width=device-width, initial-scale=1">
+   <link rel="stylesheet" type="text/css" href="/Css/main.css">
+   <link rel="stylesheet" type="text/css" href="Css/Style.css">
+   <link rel="stylesheet" type="text/css" href="Css/loader.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    
+        <title>Bhupendra Wasti Election Update</title>
     </head>
     <body>
         <iframe src="https://election-nepal-national.prixa.live/national-election-2079/embed" style="min-height: 560px;width:100%!important;overflow-y:hidden;margin-top:10px!important;" frameborder="0"></iframe>
