--- a/election.html
+++ b/election.html
@@ -11,6 +11,66 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     
         <title>Bhupendra Wasti Election Update</title>
+
+<!--Header-->
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: skyblue;">
+
+<div class="container-fluid">
+
+<div>
+
+<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
+<style>
+h4{ 
+   font-family: 'Carter One', cursive;}
+   
+
+
+</style>
+
+</div>
+
+<button class="navbar-toggler" data-toggle="collapse" data-target="#togglemenu" type="button">
+
+<span class="navbar-toggler-icon"></span>
+
+</button>
+<div class="collapse navbar-collapse" id="togglemenu">
+
+<ul class="navbar-nav ml-auto">
+
+<li class="nav-item">
+</li>
+<li class="nav-item">
+<a href="#" class="nav-link"><span class="fa fa-home"> </span> Home</a>
+</li>
+
+<li class="nav-item">
+<a href="#" class="nav-link"><span class="fa fa-photo"></span> Gallary</a>
+</li>
+
+<li class="nav-item">
+<a href="https://bhupendrawasti.com.np/election" class="nav-link"><span class="fa fa-play"></span> Games</a>
+</li>
+
+<li class="nav-item">
+<a href="#" class="nav-link"><span class="fa fa-wrench"></span> Online Tools</a>
+</li>
+
+<li class="nav-item">
+<a href="#" class="nav-link"><span class="fa fa-mobile"></span> Contact</a>
+</li>
+
+
+
+
+</ul>
+</div>
+</div>
+</nav>
+<br><br><br>
+<!--Header-->
+        
     </head>
     <body>
         <iframe src="https://election-nepal-national.prixa.live/national-election-2079/embed" style="min-height: 560px;width:100%!important;overflow-y:hidden;margin-top:10px!important;" frameborder="0"></iframe>
