--- a/election.html
+++ b/election.html
@@ -73,6 +73,5 @@ h4{
         
     </head>
     <body>
-        <iframe src="https://election-nepal-national.prixa.live/national-election-2079/embed" style="min-height: 560px;width:100%!important;overflow-y:hidden;margin-top:10px!important;" frameborder="0"></iframe>
-    </body>
+        <iframe src="https://result.election.gov.np/PRVoteChartResult.aspx" style="min-height: 560px;width:100%!important;overflow-y:hidden;margin-top:10px!important;" frameborder="0"></iframe>  </body>
 </html>
