--- a/election.html
+++ b/election.html
@@ -19,7 +19,7 @@
 
 <div>
 
-<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
+<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4><br></a>
 <style>
 h4{ 
    font-family: 'Carter One', cursive;}
@@ -72,5 +72,7 @@ h4{
         
     </head>
     <body>
-        <iframe src="https://result.election.gov.np/PRVoteChartResult.aspx" style="min-height: 560px;width:100%!important;overflow-y:hidden;margin-top:10px!important;" frameborder="0"></iframe>  </body>
+        <iframe src="https://result.election.gov.np/PRVoteChartResult.aspx" style="min-height: 560px;width:100%!important;overflow-y:hidden;margin-top:10px!important;" frameborder="0"></iframe>  
+    <h5>source:</h5><h6> Election commission nepal</h6> 
+</body>
 </html>
