--- a/election.html
+++ b/election.html
@@ -19,7 +19,7 @@
 
 <div>
 
-<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4>></a>
+<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
 <style>
 h4{ 
    font-family: 'Carter One', cursive;}
@@ -71,6 +71,7 @@ h4{
 <!--Header-->
         
     </head>
+<br>
     <body>
         Test Test 
 </body>
