--- a/election.html
+++ b/election.html
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     
-        <title>Bhupendra Wasti Election Update</title>
+        <title>Bhupendra Wasti</title>
 
 <!--Header-->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: skyblue;">
@@ -19,7 +19,7 @@
 
 <div>
 
-<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
+<a href="/index" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
 <style>
 h4{ 
    font-family: 'Carter One', cursive;}
