--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div>
 
-<a href="/index.html" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
+<a href="/index" class="navbar-brand logo"><!--<img src="/img/logo.png" width="160" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
 <style>
 h4{ 
    font-family: 'Carter One', cursive;}
@@ -43,7 +43,7 @@ h4{
 <li class="nav-item">
 </li>
 <li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-home"> </span> Home</a>
+<a href="/index" class="nav-link"><span class="fa fa-home"> </span> Home</a>
 </li>
 
 <li class="nav-item">
