Update and rename election.html to games.html

--- a/games.html
+++ b/games.html
@@ -42,7 +42,7 @@ h4{
 <li class="nav-item">
 </li>
 <li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-home"> </span> Home</a>
+<a href="/index" class="nav-link"><span class="fa fa-home"> </span> Home</a>
 </li>
 
 <li class="nav-item">
@@ -50,7 +50,7 @@ h4{
 </li>
 
 <li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-play"></span> Games</a>
+<a href="/games" class="nav-link"><span class="fa fa-play"></span> Games</a>
 </li>
 
 <li class="nav-item">
