--- a/games.html
+++ b/games.html
@@ -104,6 +104,16 @@ h4{
 </div>
     
     </body>
+
+    
+<!-- Footer -->
+<footer class="footer-basic">
+    <div class="social">
+        <a href="https://facebook.com/bhupendrawasti.official" target="_blank"><img src="Media/SocialMedia/facebook.png" height="40" width="40"></a>
+        <a href="https://www.tiktok.com/@bhupendrawasti" target="_blank"><img src="Media/SocialMedia/TikTok.png" height="40" width="40"></a>
+    </div>
+    <p class="copyright">Bhupendra Wasti © 2022</p>
+</footer>
 </html>
 <script>
 // Tic-Tac-Toe game with bot functionality
