--- a/useful_link.html
+++ b/useful_link.html
@@ -55,7 +55,35 @@ h2 {
     
 </head>
 <body>
-
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: skyblue;">
+        <div class="container">
+            <a class="navbar-brand logo" href="/index">
+                <h4 style="font-family: 'Carter One', cursive;">Bhupendra Wasti</h4>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/index"><i class="fa fa-home"></i> Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa fa-photo"></i> Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/games"><i class="fa fa-play"></i> Games</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#"><i class="fa fa-wrench"></i> Online Tools</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact"><i class="fa fa-mobile"></i> Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+                        </nav>
 <div class="container">
     <h2>Useful Links</h2>
 
