--- a/gaukhanekatha.html
+++ b/gaukhanekatha.html
@@ -4,7 +4,7 @@
     <title>गाउ खाने कथा</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="bhupendrawasti.com.np//Css/gaukhanekatha.css" />
+    <link rel="stylesheet" href="https://bhupendrawasti.com.np/Css/gaukhanekatha.css" />
 </head>
 <body>
     <div id="box">
@@ -28,6 +28,6 @@
         </div>
     </div>
 
-    <script src="scripts/gaukhanekatha.js"></script>
+    <script src="/scripts/gaukhanekatha.js"></script>
 </body>
 </html>
