--- a/gaukhanekatha.html
+++ b/gaukhanekatha.html
@@ -140,7 +140,8 @@
 
         /* Hidden attribution container */
         .attribution-container {
-            position: absolute;
+            position: absolute;            
+            background-color: rgb(255, 234, 255); 
             left: -9999px;
             top: -9999px;
             opacity: 0;
