--- a/gaukhanekatha.html
+++ b/gaukhanekatha.html
@@ -210,7 +210,7 @@
                         <h2 class="heading-secondary">Questions</h2>
                         <div class="question">${randomQuestion.question}</div>
                         <details class="answer">
-                            <summary>👉 Answer</summary>
+                            <summary>👇 Answer</summary>
                             <h3>${randomQuestion.answer}</h3>
                         </details>
                     </div>
