--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                         <a class="nav-link" href="/games"><i class="fa fa-play"></i> Games</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/gaukhanekatha"><i class="fa fa-idea"></i> Online Tools</a>
+                </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-wrench"></i> Online Tools</a>
                     </li>
                     <li class="nav-item">
