--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="/games"><i class="fa fa-play"></i> Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/gaukhanekatha"><i class="fa fa-idea"></i> Online Tools</a>
+                        <a class="nav-link" href="/gaukhanekatha"><i class="fa fa-idea"></i> Gaukhanekatha</a>
                 </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#"><i class="fa fa-wrench"></i> Online Tools</a>
