--- a/gaukhanekatha.html
+++ b/gaukhanekatha.html
@@ -157,6 +157,8 @@
     </style>
 </head>
 <body>
+        <!-- Include Navbar -->
+    <!--#include virtual="/navbar.html" -->
     <div id="box">
         <!-- Heading -->
         <h1 class="heading-primary">
