--- a/gaukhanekatha.html
+++ b/gaukhanekatha.html
@@ -25,6 +25,15 @@
             padding: 10px;
         }
 
+        /* Navbar placeholder styling */
+        #navbar-placeholder {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            z-index: 1000;
+        }
+
         #box {
             max-width: 600px;
             margin: 0 auto;
