--- a/games.html
+++ b/games.html
@@ -5,7 +5,7 @@
    <link rel="stylesheet" type="text/css" href="/Css/main.css">
         <link rel="stylesheet" type="text/css" href="Css/TicTacToe.css">
    <link rel="stylesheet" type="text/css" href="Css/Style.css">
-   <link rel="stylesheet" type="text/css" href="Css/loader.css">
+   <link rel="stylesheet" type="text/css" href="Css/navbar.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -14,61 +14,7 @@
         <title>Bhupendra Wasti</title>
 
 <!--Header-->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background: skyblue;">
-
-<div class="container-fluid">
-
-<div>
-
-<a href="/index" class="navbar-brand logo"><!--<img src="/img/logo.png" width="360" alt="Bhupendra Wasti">--> <h4>Bhupendra Wasti</h4></a>
-<style>
-h4{ 
-   font-family: 'Carter One', cursive;}
-   
-
-
-</style>
-
-</div>
-
-<button class="navbar-toggler" data-toggle="collapse" data-target="#togglemenu" type="button">
-
-<span class="navbar-toggler-icon"></span>
-
-</button>
-<div class="collapse navbar-collapse" id="togglemenu">
-
-<ul class="navbar-nav ml-auto">
-
-<li class="nav-item">
-</li>
-<li class="nav-item">
-<a href="/index" class="nav-link"><span class="fa fa-home"> </span> Home</a>
-</li>
-
-<li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-photo"></span> Gallary</a>
-</li>
-
-<li class="nav-item">
-<a href="/games" class="nav-link"><span class="fa fa-play"></span> Games</a>
-</li>
-
-<li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-wrench"></span> Online Tools</a>
-</li>
-
-<li class="nav-item">
-<a href="#" class="nav-link"><span class="fa fa-mobile"></span> Contact</a>
-</li>
-
-
-
-
-</ul>
-</div>
-</div>
-</nav>
+<!--#include virtual="/navbar.html" -->
 <!--Header-->
         
     </head>
