--- a/games.html
+++ b/games.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" type="text/css" href="Css/TicTacToe.css">
    <link rel="stylesheet" type="text/css" href="Css/Style.css">
    <link rel="stylesheet" type="text/css" href="Css/navbar.css">
+         <link rel="stylesheet" type="text/css" href="Css/footer.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">    
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -53,13 +54,7 @@
 
     
 <!-- Footer -->
-<footer class="footer-basic">
-    <div class="social">
-        <a href="https://facebook.com/bhupendrawasti.official" target="_blank"><img src="Media/SocialMedia/facebook.png" height="40" width="40"></a>
-        <a href="https://www.tiktok.com/@bhupendrawasti" target="_blank"><img src="Media/SocialMedia/TikTok.png" height="40" width="40"></a>
-    </div>
-    <p class="copyright">Bhupendra Wasti © 2022</p>
-</footer>
+<!--#include virtual="/footer.html" -->
 </html>
 <script>
 // Tic-Tac-Toe game with bot functionality
