--- a/games.html
+++ b/games.html
@@ -52,7 +52,7 @@
     
     </body>
 
-    <div id="footer"></div>
+    <div id="footer">Test</div>
 <!-- Footer -->
 <!--#include virtual="/footer.html" -->
 </html>
